# devops-cv

./: .gitignore  README.md
00-基本原理/: FaceID与传统的人脸识别到底有什区别.md  七步带你认识计算机视觉.md  美团-深度学习在OCR中的应用.md  计算机视觉人脸相关开源项目总结.md
00-基本原理/01-facenet/: README.md  人脸识别技术大总结——Face Detection & Alignment.md  利用opencv在视频中识别人脸并且保存.md  利用训练好的模型实时进行人脸检测.md
00-基本原理/100-算法和原理/: GoogleNet，站在经典模型巨人们的肩膀上的优秀网络模型.md  OpenCV DNN模块中使用Inception模型.md  mat-structure.md  opencv-school.md  opencv调用cCaffe、TensorFlow、Torch、PyTorch训练好的模型.md  understanding-convolution.md  人脸识别的步骤.md  卷积的基本概念.md  图像处理入门.md  图像的矩.md  深度学习与计算机视觉.md  计算机视觉.md
00-基本原理/100-算法和原理/00-梯度下降算法/: 00-梯度下降算法原理.md  01-price-predict.py  02-formuler.py  rosenbrock.py
00-基本原理/100-算法和原理/01-SGD-ADM/: 几种优化算法的比较.md
00-基本原理/100-算法和原理/02-模拟退火/: 00-模拟退火算法.md
00-基本原理/100-算法和原理/03-爬山法/: 00-爬山法的基本原理.md
00-基本原理/100-算法和原理/04-conv/: 1X1卷积核到底有什么作用.md  3. 卷积神经网络的结构.md  机器视角：长文揭秘图像处理和卷积神经网络架构.md
00-基本原理/100-算法和原理/05-RBM/: DBN深度信念网络详解.md  tensorflow实现DBN.md
00-基本原理/99-数学基础/01-fourier/: fourier.md  fourier2.md  傅里叶基本原理.docx
00-基本原理/99-数学基础/02-conv/: 能否对卷积神经网络工作原理做一个直观的解释.md
01-opencv-101/: README.md  data
01-opencv-101/01-opencv-helloworld/: CMakeLists.txt  helloworld.cpp  mat.cpp
01-opencv-101/03-ShapeDescriptors/: CMakeLists.txt  hull_demo.cpp
01-opencv-101/03-ShapeDescriptors/02-filters/: CMakeLists.txt  Laplacian.cpp  Morphology_1.cpp  cnn.cpp  hitmiss.cpp  loop-filter.cpp
01-opencv-101/04-advanced/: CMakeLists.txt
01-opencv-101/07-相机矫正/: .gitignore
02-dlib-101/: README.md  dlib
02-dlib-101/01-dlib-examples/: CMakeLists.txt  face_landmark_detection_ex.cpp  helloworld.cpp
03-darknet-101/: README.md
100-应用/02-拍照阅卷/: README.md
100-应用/04-中文手写体识别/: OCR的技术原理是什么.md  TensorFlow与中文手写汉字识别.md  TensorFlow手写汉字识别.md  github-tensorflow-101.md  手写中文文章识别（1）——问题描述.md
100-应用/06-deepfake/: 深度解密换脸应用Deepfake.md
101-模型算法实现/: README.md
99-深度学习gpu服务器安装/: 00-硬件配置.md  01-操作系统及驱动安装.md  02-cuda.md  03-opencv-dlib-boost.md  03-opencv-dlib.md  04-tensorflow-gpu-keras-pytorch.md  04-tensorflow-gpu.md  05-darknet.md
